--- a/.github/workflows/linux-kotato.yml
+++ b/.github/workflows/linux-kotato.yml
@@ -334,7 +334,7 @@ jobs:
           git clone -b 1.5.9 --depth=1 $GIT/anholt/libepoxy.git
 
           cd libepoxy
-          git apply ../patches/libepoxy.patch
+          git apply ../libepoxy.patch
 
           meson build \
           --buildtype=release \
@@ -361,11 +361,11 @@ jobs:
           cd qt_${QT}
           perl init-repository --module-subset=qtbase,qtwayland,qtimageformats,qtsvg,qt5compat,qttools
           cd qtbase
-          find ../../patches/qtbase_${QT} -type f -print0 | sort -z | xargs -r0 git apply
+          find ../../qtbase_${QT} -type f -print0 | sort -z | xargs -r0 git apply
           cd ../qtwayland
-          find ../../patches/qtwayland_${QT} -type f -print0 | sort -z | xargs -r0 git apply
+          find ../../qtwayland_${QT} -type f -print0 | sort -z | xargs -r0 git apply
           cd ../qt5compat
-          find ../../patches/qt5compat_${QT} -type f -print0 | sort -z | xargs -r0 git apply
+          find ../../qt5compat_${QT} -type f -print0 | sort -z | xargs -r0 git apply
           cd ..
 
           ./configure -prefix /usr/local \
