--- a/.github/workflows/linux-kotato.yml
+++ b/.github/workflows/linux-kotato.yml
@@ -141,8 +141,9 @@ jobs:
       - name: Patches.
         run: |
           cd $LibrariesPath
-          git clone  $GIT/desktop-app/patches.git
-          git checkout 5a7ba9ae3e0c61cc327aae483c74f6e6ff4058b6 -b master
+          git fetch --depth=1 --no-write-fetch-head git@github.com/desktop-app/patches.git 5a7ba9ae3e0c61cc327aae483c74f6e6ff4058b6
+          git branch master 5a7ba9ae3e0c61cc327aae483c74f6e6ff4058b6
+          git checkout
       - name: Rnnoise.
         run: |
           cd $LibrariesPath
