--- a/.github/workflows/linux-kotato.yml
+++ b/.github/workflows/linux-kotato.yml
@@ -141,12 +141,8 @@ jobs:
       - name: Patches.
         run: |
           cd $LibrariesPath
-          git init
-          git remote add origin https://github.com/desktop-app/patches.git
+          git clone $GIT/desktop-app/patches.git && cd patches && git checkout b6c29e99da
 
-          git fetch --depth=1 --no-write-fetch-head git@github.com/desktop-app/patches.git 5a7ba9ae3e0c61cc327aae483c74f6e6ff4058b6
-          git branch master 5a7ba9ae3e0c61cc327aae483c74f6e6ff4058b6
-          git checkout
       - name: Rnnoise.
         run: |
           cd $LibrariesPath
