--- a/.github/workflows/linux-kotato.yml
+++ b/.github/workflows/linux-kotato.yml
@@ -62,9 +62,9 @@ jobs:
       matrix:
         defines:
           - ""
-          - "DESKTOP_APP_DISABLE_DBUS_INTEGRATION"
-          - "DESKTOP_APP_DISABLE_X11_INTEGRATION"
-          - "DESKTOP_APP_DISABLE_WAYLAND_INTEGRATION"
+          #- "DESKTOP_APP_DISABLE_DBUS_INTEGRATION"
+          #- "DESKTOP_APP_DISABLE_X11_INTEGRATION"
+          #- "DESKTOP_APP_DISABLE_WAYLAND_INTEGRATION"
 
     env:
       GIT: "https://github.com"
